## 
## disable_ftp_support =true
## enable_print_preview =false
## enable_remoting = false
## use_glib = true
## use_gnome_keyring =false
## use_pulseaudio = false
## 
## use_gold = true
## 
## is_debug = false
## is_official_build = true
## 
## is_cfi = false
## 
## enable_memorymanager_webapi = false
## ffmpeg_branding = "Chrome"
## host_os = "linux"
## ozone_auto_platforms = false
## proprietary_codecs = true
## target_os = "linux"
## treat_warnings_as_errors = false
## is_agl = true
## #use_cbe = true
## is_chrome_cbe = true
## use_cups = false
## use_custom_libcxx = false
## use_kerberos = false
## use_neva_media = false
## use_ozone = true
## use_xkbcommon = true
## use_pmlog = false
## use_system_debugger_abort = true
## use_webos_gpu_info_collector = false
## 
## ozone_platform_wayland_external = false
## ozone_platform_wayland = true
## use_system_minigbm = true
## ozone_platform_wayland_external = true
## ozone_platform_wayland = false
## use_system_libdrm = true
## enable_nacl = false

enable_memorymanager_webapi = false
ffmpeg_branding = "Chrome"
host_os = "linux"
ozone_auto_platforms = false
proprietary_codecs = true
target_os = "linux"
treat_warnings_as_errors = false
is_agl = true
#is_webos = false
use_cbe = true
is_chrome_cbe = true
use_cups = false
use_custom_libcxx = false
use_kerberos = false
use_neva_media = false
use_ozone = true
use_xkbcommon = true
use_pmlog = false
use_system_debugger_abort = true
use_webos_gpu_info_collector = false
remove_webcore_debug_symbols = false
use_jumbo_build = true
jumbo_file_merge_limit = 8
use_lttng = false
ozone_platform_wayland_external = false
ozone_platform_wayland = true
use_system_minigbm = true
is_debug = false
is_official_build = true
is_cfi = false
symbol_level = 1
use_sysroot = false
#custom_toolchain = "//build/toolchain/yocto:yocto_target"
gold_path = ""
#host_toolchain = "//build/toolchain/yocto:yocto_native"
is_clang = false
#clang_base_path = "/shared/workspace_agl/qemux86-64/tmp/work/corei7-64-agl-linux/chromium68/git-r0/recipe-sysroot-native/usr/bin"
clang_use_chrome_plugins = false
linux_use_bundled_binutils = false
target_cpu = "x64"
#v8_snapshot_toolchain = "//build/toolchain/yocto:yocto_target"
enable_nacl = false
disable_ftp_support = true
enable_print_preview = false
enable_remoting = false
use_glib = true
use_gnome_keyring = false
use_pulseaudio = false
use_gold = false
#is_component_build = true
